0.03
 - Add EXAMPLE2 to PYX::SGML::Tags.
 - Add tests for parse() method.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Rename tests to better names (tag → element).
 - Rename PYX data files to better names (tag → element).
 - Rename PYX data to better names (tag → element).
 - Update Module::Install to 1.19 version.
 - Update copyright years.
 - Update my name to reality.

0.02 2016-02-20T23:38:52+01:00
 - Add 'input_encoding' parameter.
 - Add REPOSITORY section to doc.

0.01 2016-02-17T10:48:26+01:00
 - First version.