@@ -36,7 +36,7 @@ requires:
   perl: 5.6.2
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=PYX-SGML-Tags
-  homepage: https://github.com/tupinek/PYX-SGML-Tags
+  homepage: https://github.com/michal-josef-spacek/PYX-SGML-Tags
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/PYX-SGML-Tags
+  repository: git://github.com/michal-josef-spacek/PYX-SGML-Tags
 version: '0.03'
