@@ -132,7 +132,7 @@ SEE ALSO
         Install the PYX modules.
 
 REPOSITORY
-    <https://github.com/tupinek/PYX-SGML-Tags>
+    <https://github.com/michal-josef-spacek/PYX-SGML-Tags>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
